# OpenCASCADE.gd

./: .gitignore  AUTO_NORMALS_INTEGRATION.md  CMakeLists.txt  CMakePresets.json  SConstruct  gen_bindings.sh  pyproject.toml  vcpkg.json
.github/: renovate.json5
.github/workflows/: main.yml
demo/: example.gd  example.stp.import  example.tscn  project.godot
demo/addons/OpenCASCADE.gd/: OpenCASCADE.gd.gdextension
demo/addons/OpenCASCADE.gd-importer/: importer.gd
doc_classes/ai_bindings/: TopoDS_Shape.xml  ocgd_AdvancedMeshExporter.xml  ocgd_BRepMesh_IncrementalMesh.xml  ocgd_BooleanOperations.xml  ocgd_CADFileImporter.xml  ocgd_IGESReader.xml  ocgd_MeshDataExtractor.xml  ocgd_PrimitiveShapes.xml  ocgd_STEPCAFControl_Reader.xml  ocgd_STLExporter.xml  ocgd_ShapeAnalyzer.xml  ocgd_TopExp_Explorer.xml  ocgd_TopoDS_Shape.xml  ocgd_TopologyAnalyzer.xml
examples/: surface_normals_example.md
godot_cpp_binding_generator/: .gitignore  README.md  cli.py  config.py  cpptypes.py  emitter.py  indexer.py  main.py  scanner.py  utils.py
src/: register_types.cpp  step_and_brep_importer.cpp  step_and_brep_importer.h
src/ai_bindings/: ocgd_AdvancedMeshExporter.cpp  ocgd_AdvancedMeshExporter.hxx  ocgd_Aspect_TypeOfLine.h  ocgd_Aspect_TypeOfMarker.h  ocgd_BRepMesh_IncrementalMesh.cpp  ocgd_BRepMesh_IncrementalMesh.hxx  ocgd_BooleanOperations.cpp  ocgd_CADFileImporter.cpp  ocgd_EnhancedNormals.cpp  ocgd_GeomAbs_BSplKnotDistribution.h  ocgd_GeomAbs_CurveType.h  ocgd_GeomAbs_IsoType.h  ocgd_GeomAbs_JoinType.h  ocgd_GeomAbs_Shape.h  ocgd_GeomAbs_SurfaceType.h  ocgd_Geom_CartesianPoint.h  ocgd_Geom_Circle.h  ocgd_Geom_Conic.h  ocgd_Geom_Curve.h  ocgd_Geom_Direction.h  ocgd_Geom_Geometry.h  ocgd_Geom_Line.h  ocgd_Geom_Point.h  ocgd_Geom_Surface.h  ocgd_Geom_Vector.h  ocgd_IGESReader.cpp  ocgd_MeshDataExtractor.cpp  ocgd_MeshDataExtractor.hxx  ocgd_PrimitiveShapes.cpp  ocgd_Quantity_NameOfColor.h  ocgd_STEPCAFControl_Reader.cpp  ocgd_STLExporter.cpp  ocgd_ShapeAnalyzer.cpp  ocgd_TopAbs_Orientation.h  ocgd_TopAbs_ShapeEnum.h  ocgd_TopAbs_State.h  ocgd_TopExp_Explorer.cpp  ocgd_TopoDS_Shape.cpp  ocgd_TopologyAnalyzer.cpp  ocgd_gp_Ax1.h  (+33 more)
src/step_importer/: register_types.cpp  register_types.h
vcpkg_ports/freetype/: portfile.cmake
vcpkg_ports/opencascade-gd/: godot-cpp.patch  portfile.cmake
vcpkg_triplets/: arm64-linux.cmake  arm64-mingw-static.cmake  wasm32-emscripten-pic.cmake
