[project]
name = "godot-cpp-binding-generator"
version = "0.1.0"
description = ""
authors = [
    {name = "Yeicor"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "clang (>=21.1.7,<21.2.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
